--- a/HPMW/WebContent/css/nbboardContentPage.css
+++ b/HPMW/WebContent/css/nbboardContentPage.css
@@ -50,14 +50,14 @@ div.bdr table{
 	table-layout: fixed;
 }
 
-div.bdr table th,td{
+/* div.bdr table th,td{
 	line-height: 30px;
-	/* 이거는 넘치는 텍스트 ... 처리용 */
+	이거는 넘치는 텍스트 ... 처리용
 	overflow:hidden;
 	white-space : nowrap;
 	text-overflow: ellipsis;
   margin-bottom: 10px;
-}
+} */
 
 div.bdr table tr td {
    text-align: center;
